--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,238 @@
-/* место для вашего кода */
+/* Глобальные отступы */
+.header {
+    padding: 92px 50px;
+    margin-bottom: 96px;
+}
+
+.cover {
+    padding: 165px 50px 50px;
+    margin-bottom: 180px;
+}
+
+.lots {
+    padding: 0 50px;
+    margin-bottom: 180px;
+}
+
+.about {
+    padding: 0 50px;
+    margin-bottom: 180px;
+}
+
+.footer {
+    padding: 180px 50px 90px;
+}
+
+/* Шапка */
+.header {
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+}
+
+.header__links-list {
+    display: flex;
+    gap: 32px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.header__links-list-item:not(:last-child)::after {
+    content: "•";
+    margin-left: 32px;
+}
+
+.header__links-list-item_no-bullit::after {
+    content: none;
+}
+
+.header__link {
+    text-decoration: none;
+    color: #000;
+    font-size: 18px;
+}
+
+.header__link_active {
+    text-decoration: none;
+}
+
+.header__logo {
+    justify-self: center;
+}
+
+.header__address {
+    justify-self: end;
+    font-style: normal;
+    text-align: right;
+}
+
+/* Обложка */
+.cover {
+    position: relative;
+    min-height: 757px;
+    background-image: url('../images/cover.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.cover__title {
+    position: relative;
+    z-index: 2;
+    color: white;
+    font-size: 100px;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.15;
+}
+
+.aligned-text {
+    display: block;
+}
+
+.aligned-text_left {
+    text-align: left;
+}
+
+.aligned-text_center {
+    text-align: center;
+}
+
+.aligned-text_right {
+    text-align: right;
+}
+
+.cover__description {
+    position: relative;
+    z-index: 2;
+    margin-top: 135px;
+    color: white;
+}
+
+.bet-button {
+    background: transparent;
+    border: 1px solid white;
+    color: white;
+    padding: 12px 32px;
+    font-size: 22px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+/* Лоты */
+.lots__card-list {
+    display: flex;
+    gap: 25px;
+    list-style: none;
+    padding: 0;
+    margin: 0 0 30px 0;
+}
+
+.lots__card-list-item {
+    flex: 1;
+    min-height: 450px;
+}
+
+.card-link {
+    text-decoration: none;
+    display: block;
+    height: 100%;
+}
+
+.card {
+    position: relative;
+    height: 100%;
+    padding: 50px 40px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card_type_film {
+    background-image: url('../images/card-lot-01.jpg');
+}
+
+.card_type_book {
+    background-image: url('../images/card-lot-02.jpg');
+}
+
+.card_type_picture {
+    background-image: url('../images/card-lot-03.jpg');
+}
+
+.card__title {
+    position: relative;
+    z-index: 2;
+    color: white;
+    font-size: 22px;
+    text-decoration: underline;
+    text-transform: uppercase;
+}
+
+.card__text {
+    position: relative;
+    z-index: 2;
+    color: white;
+    font-size: 20px;
+}
+
+/* Об аукционе */
+.about {
+    display: grid;
+    grid-template-columns: 430px 1fr;
+    gap: 25px;
+}
+
+.about__logo {
+    width: 240px;
+    height: 240px;
+    background: black;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+/* Подвал */
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: start;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer__social-list {
+    display: flex;
+    gap: 48px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-self: end;
+}
